[gd_scene load_steps=10 format=2]

[ext_resource path="res://SimpleEnnemy.gd" type="Script" id=1]
[ext_resource path="res://assets/SoldatIdle-Sheet.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=6]
radius = 127.093

[sub_resource type="CapsuleShape2D" id=7]
radius = 6.65864
height = 11.4236

[node name="SimpleEnnemy" type="KinematicBody2D" groups=[
"Ennemies",
]]
collision_layer = 2
script = ExtResource( 1 )
speed = Vector2( 50, 350 )
hearing_distance = 200.0

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
animation = "idle"
playing = true

[node name="PlayerDetector" type="Area2D" parent="Sprite"]

[node name="DetectionCollider" type="CollisionShape2D" parent="Sprite/PlayerDetector"]
position = Vector2( -0.0834274, 0 )
shape = SubResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4.31087 )
shape = SubResource( 7 )

[node name="FloorDetectorLeft" type="RayCast2D" parent="."]
position = Vector2( -8, -0.125 )
enabled = true
cast_to = Vector2( 0, 18 )

[node name="FloorDetectorRight" type="RayCast2D" parent="."]
position = Vector2( 8, 0 )
enabled = true
cast_to = Vector2( 0, 18 )

[node name="PlatformDetector" type="RayCast2D" parent="."]
position = Vector2( -0.0496063, 16.6355 )
enabled = true
cast_to = Vector2( 0, 0.5 )

[node name="DistractedTime" type="Timer" parent="."]
one_shot = true

[node name="LineOfSight" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 0 )
collision_mask = 3
[connection signal="body_entered" from="Sprite/PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="Sprite/PlayerDetector" to="." method="_on_PlayerDetector_body_exited"]
[connection signal="timeout" from="DistractedTime" to="." method="_on_DistractedTime_timeout"]
